# maintenance

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
data/: CORPUS_COLLECTE.md  README.md
data/raw/pdf/: INVENTORY.md
docs/: COLLECTION_MIGRATION.md  PROJECT_OVERVIEW.docx  architecture.md  evaluation.md  pipeline.md  pitch_entrevue.md
docs/diagrams/: pipeline.drawio
reports/: .gitkeep
scripts/: 01_setup_mlx.sh  02_ingest.sh  03_run_eval.sh  99_clean.sh  demo_questions.md  dev_up.sh  eval_per_source_only.py  generate_overview_docx.py  manage_collection.py  test_query_relevance.py
src/: __init__.py  config.py
src/api/: __init__.py  main.py  metrics.py  schemas.py
src/api/routes/: __init__.py  eval.py  index.py  ingest.py  query.py
src/eval/: __init__.py  dataset.py  ragas_runner.py
src/ingestion/: __init__.py  chunker.py  cmapss_loader.py  pdf_loader.py  pipeline.py
src/rag/: __init__.py  agent.py  chain.py  embeddings.py  intents.py  language.py  llm.py  reranker.py  retriever.py  types.py  vectorstore.py
src/rag/prompts/: qa_template.py  system_en.txt  system_fr.txt
src/ui/: __init__.py  api_client.py  sidebar.py  streamlit_app.py
src/ui/tabs/: __init__.py  chat.py  index.py  inventory.py  ragas.py
src/utils/: __init__.py  logger.py  timing.py
tests/: __init__.py  conftest.py  test_api.py  test_eval.py  test_ingestion.py  test_metrics.py  test_pure_helpers.py  test_rag_chain.py  test_reranker.py  test_ui_helpers.py
tests/fixtures/: sample_doc.txt
web/: README.md  demo.html  index.html  styles.css
