[project]
name = "industrial-knowledge-copilot"
version = "0.1.0"
description = "Local RAG copilot for industrial maintenance knowledge (NASA CMAPSS + technical PDFs)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Patrice Duclos", email = "patrice@lyonflow.fr" },
]
keywords = ["rag", "llm", "mlx", "industrial", "maintenance", "cmapss", "nasa"]

# Runtime deps are pinned in requirements.txt for reproducibility.
# This [project] block is metadata-only (no build backend needed).

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "data",
    "mlx_models",
]

[tool.ruff.lint]
# Conservative rule set. Add rules as the codebase grows.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are OK in tests

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    # Integration tests (those that touch a live DB, LLM, or external API)
    # are marked @pytest.mark.integration and skipped by default. Run them
    # explicitly with: pytest -m integration
    "-m not integration",
]
markers = [
    "integration: tests that require live services (ChromaDB, MLX, NASA data)",
    "slow: tests that take more than 5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:chromadb.*",
    "ignore::DeprecationWarning:langchain.*",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/*/__init__.py",
    "src/ingestion/chunker.py",  # covered indirectly via integration tests
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1
